# django-cosmograph

./: README.md  pyproject.toml
cosmograph_ui/src/: App.jsx
django_cosmograph/static/django_cosmograph/: cosmograph.js
django_cosmograph/templates/django_cosmograph/: cosmograph.html
sample_project/: settings.py  views.py
sample_project/static/css/: styles.css
sample_project/templates/: base.html
